# SPDX-License-Identifier: BSD-3-Clause
#
# Copyright (c) 2017-2018 Solarflare Communications Inc.
# All rights reserved.
#
# This software was jointly developed between OKTET Labs (under contract
# for Solarflare) and Solarflare Communications, Inc.

# for mempool populate/calc_mem_size helpers
allow_experimental_apis = true

sources = files('rte_mempool_bucket.c')
